Adding ribbon message, modification and many more...
Adding Release notification, Cicr report update, Adding more documentation for the operation, restructure main menu, access log from user interface and bug fixes.

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -604,3 +604,20 @@ Data Table styling
     text-align: center;
     vertical-align: middle; /* Optional: centers content vertically */
 }
+
+.ribbonclass {
+	/* display: none; */
+	width: 100%;
+	text-align: center;
+	height: 5%;
+	padding: 10px;
+	font-size: 1.3em;
+}
+
+.ribbon-warn {
+	background-color: red;
+}
+
+.ribbon-info {
+	background-color: orange;
+}
