--- a/src/main/resources/templates/operations.html
+++ b/src/main/resources/templates/operations.html
@@ -41,27 +41,33 @@
 
 	<ul class="nav nav-tabs">
 		<li class="active"><a data-toggle="tab" href="#general">General</a></li>
+		<li><a data-toggle="tab" href="#cicrlog">Circulation Log</a></li>
 		<li><a data-toggle="tab" href="#user">User</a></li>
 		<li><a data-toggle="tab" href="#user-patron-group">User
 				Patron Group</a></li>
 		<li><a data-toggle="tab" href="#settings">Settings</a></li>
 	</ul>
 
-
 	<div class="tab-content">
 
 		<div id="general" class="tab-pane fade in active">
 
 			<div class="row top-buffer container-border">
-
+				<h4>
+					<b>Semester Loan Due Dates.</b>
+				</h4>
+				<h5>
+					<i>#ManualTask</i>
+				</h5>
 				<form method="get"
 					th:action="@{/settings/changeLoanDueDatesForPatronGroup}">
 
 					<div class="row">
 
-						<div class="col-xs-8">Get users by the patron group then
-							find users with loans and updates. As an example by executing
-							"OKS-OSU_Faculty" and "2024-05-25"</div>
+						<div class="col-xs-8">Retrieve users based on their patron
+							group, identify those with active loans, and update their loan
+							due dates to a specified date. As an example by executing
+							"OKS-OSU_Faculty" users and update their loans "2024-05-25".</div>
 						<div class="col-xs-2">
 							<button type="submit" id="executePatronGroupLoans" disabled
 								class="btn btn-success btn-md btn-block">Execute</button>
@@ -78,41 +84,20 @@
 				</form>
 			</div>
 
-
 			<div class="row top-buffer container-border">
+				<h4>
+					<b>OCLC operation.</b>
+				</h4>
+				<h5>
+					<i>#ScheduleTask</i>
+				</h5>
 
-				<form method="get" th:action="@{/settings/circulationDataStore}">
-
-					<div class="row">
-
-						<div class="col-xs-8">Get "closed" circulation log details
-							from the API and stored in DB for reporting purposes.</div>
-						<div class="col-xs-2">
-							<button type="submit" id="executeCirculationLog" disabled
-								class="btn btn-success btn-md btn-block">Execute</button>
-						</div>
-
-						<div class="col-xs-1">
-							<input type="checkbox"
-								onchange="document.getElementById('executeCirculationLog').disabled = !this.checked;" />
-						</div>
-						<div class="col-xs-1">
-							<h5 th:text="${Process_CirculationLog_API_Data_Extraction}"></h5>
-						</div>
-
-					</div>
-				</form>
-
-			</div>
-
-
-			<div class="row top-buffer container-border">
-				<h4>OCLC operation.</h4>
 				<form method="get" th:action="@{/settings/oclcMetaDataProcess}">
 
 					<div class="row">
-						<div class="col-xs-8">Send test email to the developers who
-							using RedBud application.</div>
+						<div class="col-xs-8">Set and withdraw holdings in OCLC
+							based on recently updated FOLIO records. The tool utilizes the
+							FOLIO and OCLC APIs and is intended to run daily via a scheduled.</div>
 
 						<div class="col-xs-2">
 							<button type="submit" id="executeoclcMetaDataProcess"
@@ -133,13 +118,18 @@
 			</div>
 
 			<div class="row top-buffer container-border">
-				<h4>GOV Docs location operation.</h4>
+				<h4>
+					<b>Gov Docs. location update operation.</b>
+				</h4>
+				<h5>
+					<i>#ManualTask</i>
+				</h5>
 				<form method="get"
 					th:action="@{/settings/govDocsLocationUpdateProcess}">
 
 					<div class="row">
 						<div class="col-xs-8">Update the location of the selected
-							Gov Doc location.</div>
+							Government documentations based on location.</div>
 
 						<div class="col-xs-2">
 							<button type="submit" id="executegovDocsLocationUpdateProcess"
@@ -160,13 +150,18 @@
 			</div>
 
 			<div class="row top-buffer container-border">
-				<h4>ALMA loan count update from csv file.</h4>
+				<h4>
+					<b>ALMA loan count update from csv file.</b>
+				</h4>
+				<h5>
+					<i>#ManualTask</i>
+				</h5>
 				<form method="get"
 					th:action="@{/settings/almaLoanCountUpdateProcess}">
 
 					<div class="row">
 						<div class="col-xs-8">Update the database from the ALMA loan
-							count from csv file .</div>
+							count from csv file.</div>
 
 						<div class="col-xs-2">
 							<button type="submit" id="executealmaLoanCountUpdateProcess"
@@ -187,13 +182,19 @@
 			</div>
 
 			<div class="row top-buffer container-border">
-				<h4>Collecting inventory holdings count based on institutes.</h4>
+				<h4>
+					<b>Collecting resources count based on institutes.</b>
+				</h4>
+
+				<h5>
+					<i>#ScheduleTask</i>
+				</h5>
 				<form method="get"
 					th:action="@{/settings/institutionalHoldingsRecordsProcess}">
 
 					<div class="row">
-						<div class="col-xs-8">Get the relevant record count of
-							Holdings related to each institutes.</div>
+						<div class="col-xs-8">Manually gather the record count for
+							Instances, Holdings, and Items associated with each institution.</div>
 
 						<div class="col-xs-2">
 							<button type="submit"
@@ -213,18 +214,172 @@
 				</form>
 
 			</div>
-			
+
+		</div>
+
+		<div id="cicrlog" class="tab-pane fade">
+
 			<div class="row top-buffer container-border">
-				<h4>Update staff note.</h4>
-				<form method="get"
-					th:action="@{/settings/updateStaffNoteInHolidings}">
+				<h4>
+					<b>Manual Process for getting the Circulation records to
+						database.</b>
+				</h4>
+				<h5>
+					<i>#ManualTask</i>
+				</h5>
+				<form method="get" th:action="@{/settings/circulationDataStore}">
 
 					<div class="row">
-						<div class="col-xs-8">Update staff note</div>
+
+						<div class="col-xs-8">Get all 'open' and 'closed' circulation
+							log details from the API and stored in DB for reporting purposes. This operation not depend on any time frame.</div>
+						<div class="col-xs-2">
+							<button type="submit" id="executeCirculationLog" disabled
+								class="btn btn-success btn-md btn-block">Execute</button>
+						</div>
+
+						<div class="col-xs-1">
+							<input type="checkbox"
+								onchange="document.getElementById('executeCirculationLog').disabled = !this.checked;" />
+						</div>
+						<div class="col-xs-1">
+							<h5 th:text="${Process_CirculationLog_API_Data_Extraction}"></h5>
+						</div>
+
+					</div>
+				</form>
+
+			</div>
+
+			<div class="row top-buffer container-border">
+				<h4>
+					<b>Manual Process for getting the Circulation records to
+						database for a specific location.</b>
+				</h4>
+				<h5>
+					<i>#ManualTask</i>
+				</h5>
+				<form method="get" th:action="@{/settings/circulationDataStore}">
+
+					<div class="row">
+
+						<div class="col-xs-12">Get 'open' and 'closed' circulation
+							log details from the API based on location and stored in DB for
+							reporting purposes.</div>
+					</div>
+
+
+					<div class="row top-buffer">
 
 						<div class="col-xs-2">
-							<button type="submit"
-								id="executeUpdateStaffNoteInHolidings"
+							<select onchange="selectInstitution()" class="form-control"
+								id="institutionDropDown" th:name="institutionDropDown">
+								<option th:value="0">Select Institution</option>
+
+								<option th:each="institution : ${institutionList}"
+									th:value="${institution.institution_id}"
+									th:text="${institution.institution_name}"></option>
+							</select>
+						</div>
+						<div class="col-xs-2">
+							<select onchange="selectCampus()" class="form-control"
+								id="campusDropDown">
+								<option th:value="0">Select Campus</option>
+
+								<option th:each="campus : ${campusList}"
+									th:value="${campus.campus_id}" th:text="${campus.campus_name}"></option>
+							</select>
+						</div>
+						<div class="col-xs-2">
+							<select onchange="selectLibrary()" class="form-control"
+								id="libraryDropDown" th:name="libraryDropDown">
+								<option th:value="0">Select Library</option>
+
+								<option th:each="library : ${libraryList}"
+									th:value="${library.library_id}"
+									th:text="${library.library_name}"></option>
+							</select>
+						</div>
+						<div class="col-xs-2">
+							<select class="form-control" id="locationDropDown"
+								th:name="locationDropDown">
+								<option th:value="0">Select Location</option>
+
+								<option th:each="location : ${locationList}"
+									th:value="${location.location_id}"
+									th:text="${location.location_name}"></option>
+							</select>
+						</div>
+						<div class="col-xs-2">
+							<button type="submit" id="executeCirculationLogByLocation"
+								disabled class="btn btn-success btn-md btn-block">Execute</button>
+						</div>
+
+						<div class="col-xs-1">
+							<input type="checkbox"
+								onchange="document.getElementById('executeCirculationLogByLocation').disabled = !this.checked;" />
+						</div>
+						<div class="col-xs-1">
+							<h5 th:text="${Process_CirculationLog_API_Data_Extraction}"></h5>
+						</div>
+
+					</div>
+
+				</form>
+
+			</div>
+
+
+			<div class="row top-buffer container-border">
+				<h4>
+					<b>Manual Process for getting the Circulation records to
+						database based on previous day records</b>
+				</h4>
+				<h5>
+					<i>#ScheduleTask</i>
+				</h5>
+				<form method="get"
+					th:action="@{/settings/circulationDataStorseAutoProcess}">
+
+					<div class="row">
+
+						<div class="col-xs-8">Get 'open' and 'closed' circulation
+							log details from the API and stored in DB for reporting purposes.</div>
+						<div class="col-xs-2">
+							<button type="submit" id="executeCirculationLogAutoProcess"
+								disabled class="btn btn-success btn-md btn-block">Execute</button>
+						</div>
+
+						<div class="col-xs-1">
+							<input type="checkbox"
+								onchange="document.getElementById('executeCirculationLogAutoProcess').disabled = !this.checked;" />
+						</div>
+						<div class="col-xs-1">
+							<h5
+								th:text="${Process_CirculationLog_API_Data_Extraction_Auto_Process}"></h5>
+						</div>
+
+					</div>
+				</form>
+
+			</div>
+
+			<div class="row top-buffer container-border">
+				<h4>
+					<b>Update Circulation Log properties</b>
+				</h4>
+				<h5>
+					<i>#ManualTask</i>
+				</h5>
+				<form method="get"
+					th:action="@{/settings/updateCirculationLogRecordProperties}">
+
+					<div class="row">
+						<div class="col-xs-8">Modify staff notes and statements
+							associated with items in the circulation log records.</div>
+
+						<div class="col-xs-2">
+							<button type="submit" id="executeUpdateStaffNoteInHolidings"
 								name="executeUpdateStaffNoteInHolidings" disabled
 								class="btn btn-success btn-md btn-block">execute</button>
 						</div>
@@ -241,20 +396,57 @@
 
 			</div>
 
+			<div class="row top-buffer container-border">
+				<h4>
+					<b>Find items in a specific location for not used</b>
+				</h4>
+				<h5>
+					<i>#ManualTask</i>
+				</h5>
+				<form method="get"
+					th:action="@{/settings/neverCirculatedItemsSearchProcess}">
 
+					<div class="row">
+						<div class="col-xs-8">Search items that never used for
+							circulations</div>
 
+						<div class="col-xs-2">
+							<button type="submit"
+								id="executeNeverCirculatedItemsSearchProcess"
+								name="executeNeverCirculatedItemsSearchProcess" disabled
+								class="btn btn-success btn-md btn-block">execute</button>
+						</div>
+						<div class="col-xs-1">
+							<input type="checkbox"
+								onchange="document.getElementById('executeNeverCirculatedItemsSearchProcess').disabled = !this.checked;" />
+						</div>
+						<div class="col-xs-1">
+							<h5 th:text="${Never_Circulated_Items_Search_Process}"></h5>
+						</div>
 
+					</div>
+				</form>
 
+			</div>
 		</div>
 
 		<div id="user" class="tab-pane fade">
 
 			<div class="row top-buffer container-border">
-
-				<form method="get" th:action="@{/settings/executeinactiveusers}">
+				<h4>
+					<b>Update expiration date of the active users.</b>
+				</h4>
+				<h5>
+					<i>#ManualTask</i>
+				</h5>
+				<form method="get"
+					th:action="@{/settings/executechangeexpirationdates}">
 
 					<div class="row">
-						<div class="col-xs-8">Executive inactive users</div>
+						<div class="col-xs-8">When executed, the process will
+							iterate through all user groups across all campuses to identify
+							active users and update their expiration dates to nine months
+							from the execution date..</div>
 						<div class="col-xs-2">
 							<button type="submit" id="executeInactiveUsers" disabled
 								class="btn btn-success btn-md btn-block">Execute</button>
@@ -296,7 +488,12 @@
 			</div>
 
 			<div class="row top-buffer container-border">
-				<h4>Update User details from Excel file.</h4>
+				<h4>
+					<b>Update User details from Excel file.</b>
+				</h4>
+				<h5>
+					<i>#ManualTask</i>
+				</h5>
 				<form method="get" th:action="@{/settings/userFieldsUpdateProcess}">
 
 					<div class="row">
@@ -324,7 +521,12 @@
 			</div>
 
 			<div class="row top-buffer container-border">
-				<h4>Update User new bar codes.</h4>
+				<h4>
+					<b>Update User new bar codes.</b>
+				</h4>
+				<h5>
+					<i>#ManualTask</i>
+				</h5>
 				<form method="get"
 					th:action="@{/settings/userBarcodesUpdateProcess}">
 
@@ -353,7 +555,12 @@
 			</div>
 
 			<div class="row top-buffer container-border">
-				<h4>Check User with null Values</h4>
+				<h4>
+					<b>Check User with null Values</b>
+				</h4>
+				<h5>
+					<i>#ManualTask</i>
+				</h5>
 				<form method="get"
 					th:action="@{/settings/nullUserPropertyCheckProcess}">
 
@@ -382,7 +589,12 @@
 		<div id="user-patron-group" class="tab-pane fade">
 
 			<div class="row top-buffer container-border">
-				<h4>Change patron group</h4>
+				<h4>
+					<b>Change patron group</b>
+				</h4>
+				<h5>
+					<i>#ManualTask</i>
+				</h5>
 				<form method="get" th:action="@{/settings/changePatronGroup}">
 
 					<div class="row">
@@ -410,7 +622,12 @@
 
 
 			<div class="row top-buffer container-border">
-				<h4>Update User patron group, bar code and status.</h4>
+				<h4>
+					<b>Update User patron group, bar code and status.</b>
+				</h4>
+				<h5>
+					<i>#ManualTask</i>
+				</h5>
 				<form method="get"
 					th:action="@{/settings/userPatronGroupUpdateProcess}">
 
@@ -437,7 +654,12 @@
 			</div>
 
 			<div class="row top-buffer container-border">
-				<h4>Compare user's "Patron group" with "Custom field"</h4>
+				<h4>
+					<b>Compare user's "Patron group" with "Custom field"</b>
+				</h4>
+				<h5>
+					<i>#ManualTask</i>
+				</h5>
 				<form method="get"
 					th:action="@{/settings/userPatronGroupReportProcess}">
 
@@ -469,7 +691,12 @@
 		<div id="settings" class="tab-pane fade">
 
 			<div class="row top-buffer container-border">
-				<h4>Send Test Email.</h4>
+				<h4>
+					<b>Send Test Email.</b>
+				</h4>
+				<h5>
+					<i>#ManualTask</i>
+				</h5>
 				<form method="get" th:action="@{/settings/sendTestEmail}">
 
 					<div class="row">
@@ -512,8 +739,6 @@
 			</div>
 		</div>
 
-
-
 	</div>
 
 	<div class="row top-buffer"></div>
@@ -522,10 +747,5 @@
 
 <div th:replace="common/footer :: footer"></div>
 <div th:replace="common/header :: body-bottom-scripts"></div>
-<script>
-	$(document).ready(function() {
-		$('#example').DataTable();
-	});
-</script>
 </body>
 </html>
