Add new settings, Remove unwanted hardcoded numbers , fine tune OCLC process and bug fixes.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 <head th:replace="common/header :: navbar" />
 
 <div class="container main">
-	<h2 style="text-align: center;">Redbud : FOLIO Help Tool</h2>
+	<h2 style="text-align: center;">Redbud : FOLIO Assistant Tool</h2>
 	<hr>
 
 	<div class="row" style="padding-top: 50px; padding-bottom: 100px">
