Circulation loan report process, Documentation and bug fixes and improvements.

--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -138,6 +138,8 @@
 
 								<li><a th:href="@{/reports/circulationlog}">Circulation
 										Log </a></li>
+								<li><a th:href="@{/reports/circulationloan}">Circulation
+										Loans </a></li>
 								<li><a th:href="@{/reports/institutionRecords}">Institution
 										Records </a></li>
 
