--- a/src/main/resources/templates/error-page.html
+++ b/src/main/resources/templates/error-page.html
@@ -9,16 +9,18 @@
 <head th:replace="common/header :: navbar" />
 
 <div class="container main">
-	<h2 style="text-align: center;">Redbud : FOLIO Assistant Tool</h2>
+	<h2 style="text-align: center;">Error Occurred</h2>
 	<hr>
 
 	<div class="row" style="padding-top: 50px; padding-bottom: 100px">
 
-		<img alt="" src="/images/index.webp">
+		<img alt="" src="/images/error.jpg">
 
+		<div style="text-align: center;">
+			<h4>If you continue to receive this error please contact the
+				development team.</h4>
+		</div>
 	</div>
-
-	<div class="row"></div>
 
 </div>
 
