--- a/src/main/resources/templates/reports/circulationloan.html
+++ b/src/main/resources/templates/reports/circulationloan.html
@@ -9,7 +9,7 @@
 	<div class="row">
 		<div class="col-lg-12">
 			<h1 class="page-header">
-				Circulation Log
+				Circulation Loans
 				<button type="button" class="btn btn-info" data-bs-toggle="modal"
 					id="helpButton" data-bs-target="#exampleModal">?</button>
 			</h1>
@@ -21,14 +21,15 @@
 				<div class="modal-content">
 					<div class="modal-header">
 						<h3 class="modal-title" id="exampleModalLabel">Circulation
-							Log - Help</h3>
+							Loans - Help</h3>
 					</div>
 					<div class="modal-body">
 
 						<ul>
 							<li>Displays circulation loan records with relevant to the
 								library items.Please select the relevant location from the drop
-								downs and select from and to date (last loan date duration) to proceed.</li>
+								downs and select from and to date (loan date duration) to
+								proceed.</li>
 						</ul>
 					</div>
 
@@ -153,7 +154,7 @@
 		<div class="row top-buffer"></div>
 		<div class="row container-border">
 
-			<div class="col-xs-3 form-inline" >
+			<div class="col-xs-3 form-inline">
 
 				<div class="form-group">
 					<div class="form-group">
@@ -211,7 +212,7 @@
 
 						<select class="form-control" id="materialTypeDropDown"
 							th:name="materialTypeDropDown">
-							<option th:value="0">Select Material Type</option>
+							<option th:value="0">All Material Types</option>
 
 							<option th:each="material: ${materialTypeList}"
 								th:value="${material.materialType}"
@@ -227,16 +228,18 @@
 
 				<div class="form-group">
 					<div class="form-group">
-						<label class="cols-sm-2 control-label">Only empty dates</label>
+						<label class="cols-sm-2 control-label">Loan Action</label>
 						<div class="cols-sm-10">
 							<div class="input-group">
 
-								<div class="input-group">
-									<input type="checkbox" id="is_with_empty_dates"
-										value="checkboxValue">
-
-								</div>
-
+								<select class="form-control" id="loanActionDropDown"
+									th:name="loanActionDropDown">
+									<option value="0">All</option>
+									<option value="1">checkedout</option>
+									<option value="2">renewed</option>
+									<option value="3">checkedOutThroughOverride</option>
+									<option value="4">checkedin</option>
+								</select>
 
 							</div>
 						</div>
@@ -250,21 +253,7 @@
 			<div class="col-xs-3 form-inline">
 
 				<div class="form-group">
-					<div class="form-group">
-						<label class="cols-sm-2 control-label">Open Loans</label>
-						<div class="cols-sm-10">
-							<div class="input-group">
-
-								<div class="input-group">
-									<input type="checkbox" id="is_only_open_loans"
-										value="checkboxValue">
-
-								</div>
-
-
-							</div>
-						</div>
-					</div>
+					<div class="form-group"></div>
 
 				</div>
 
@@ -335,7 +324,7 @@
 						|| $('#end_date').val() == '') {
 					alert("Select From and To Date")
 				} else {
-					callCirculationLogReportAjaxRequest();
+					callCirculationLoanReportAjaxRequest();
 				}
 
 			});
